@@ -2,6 +2,7 @@
 #
 build_ACCOUNT=m
 build_CHAOS=m
+build_CHECKSUM=m
 build_DELUDE=m
 build_DHCPMAC=m
 build_ECHO=
