@@ -2,6 +2,7 @@
 HEAD
 ====
 - RAWNAT: IPv6 variants erroneously rejected masks /33-/128
+- new target xt_CHECKSUM
 
 
 Xtables-addons 1.27 (May 16 2010)
